--- a/web/assets/styles/portfolio.css
+++ b/web/assets/styles/portfolio.css
@@ -29,7 +29,7 @@ header
   margin-left: 5%;
 }
 
-.me{ padding-left: 5%;  }
+.me{ padding-left: 5%; pointer-events: none;  }
 
 #theme
 {
@@ -38,8 +38,10 @@ header
   height: 275px;
   margin: auto;
   padding: 1px;
+  pointer-events: none;
 }
 
+.proj_img{pointer-events: none;}
 @media (max-width: 1100px) {
 #theme{width: 40%;}
 #time{display: none;}
